       - Improve POD
       - Add testing dependency
       - Correct SetObject

0.11 - 2012-09-10
       - Generalize parameterizable (fREW)
       - Rework type string arguments to follow ['Str'] pattern (mattp)
       - New types: InstanceOf, ConsumerOf and HasMethods

0.10 - 2012-08-26
       - Allow Type() arguments (mattp)
       - Improve error handling for parameterized types (mattp)
       - Improve documentation

0.09 - 2012-07-23
       - Preserve attribute properties defined after 'isa'
         [github issue #7]
         Failing tests (xsawyerx)

0.08 - 2012-07-03
       - Support for parameterized type: Maybe
         For example,  isa => Maybe[Int]

0.07 - 2012-06-29
       - Support for parameterized types: ArrayRef, HashRef, ScalarRef
         This means one can now write: isa => ArrayRef[HashRef]

0.06 - 2012-06-27
       - Make subtype use full test [#RT78074] (SineSwiper)
       - Correct SingleDigit type definition [#RT78074] (SineSwiper)
       - Add Stack Trace on Exception [RT#77583] (Mithaldu)

0.05 - 2012-05-16
       - Add Deps [RT#77225] (SymKat)
       - Add META (SineSwiper)

0.04 - 2012-04-27
       ADDITIONS:
       * Add support for Moo type inflation to Moose (mst)

       API CHANGE:
       * Numeric types equivalent to MooseX::Type::Common::Numeric

0.03 - 2012-03-19
       IMPROVEMENTS:
       * Bunches of POD [RT#73519]
       * Simplified Exporter usage [RT#75209] (dolmen)
       * Removed Data::Dumper::Concise dependency [RT#73469] (rsimoes)

       ADDITIONS:
       * Numeric Types
       * Experimental type building API

       API CHANGE:
       * Basic types are now found in MooX::Types::MooseLike::Base
         instead of MooX::Types::MooseLike


0.02 - 2011-10-21
       ADDITIONS:
       * Most non-parameterized types of the basic Moose type hierarchy
         are now supported.  Exceptions are ClassName and RoleName
       * Ability to re-use the type tests to build new ones via is_$type()

       IMPROVEMENTS: