@@ -1,6 +1,7 @@
        - Improve POD
        - Add testing dependency
        - Correct SetObject
+       - Enable ConsumerOf to accept multiple roles
 
 0.11 - 2012-09-10
        - Generalize parameterizable (fREW)
